--- a/style.css
+++ b/style.css
@@ -1,11 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Seymour+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Seymour+One&display=swap");
+
 body {
   font-family: "Roboto", sans-serif;
-    background-color: #171717;
-    margin: 0;
-    padding: 0;
-    min-height: 100vh; 
-    display: flex;
+  background-image: url(./assets/1.jpeg);
+  margin: 0;
+  padding: 0;
+  min-height: 100vh; 
+  backdrop-filter: blur(5px);
+  display: flex;
   flex-direction: column;
+  background-size:cover;
+  background-repeat: no-repeat;
+  
   }
   
   .container {
@@ -13,10 +20,11 @@ body {
     width: 400px;
     margin: 50px auto;
     padding: 20px;
-    background-color: #333; 
+    backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 0.226); 
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-  }
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    }
 
   @media screen and (max-width:600px) {
     .container{
@@ -26,11 +34,14 @@ body {
   
   h1 {
     text-align: center;
-    color: #fff; 
+    color: rgba(255, 255, 255, 0.616); 
     margin-bottom: 20px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-    animation: heartbeat 2s ease infinite alternate;
-
+    /* animation: heartbeat 2s ease infinite alternate; */
+    font-family: "Seymour One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+    
   }
   
   @keyframes heartbeat {
@@ -46,10 +57,18 @@ body {
     width: calc(100% - 22px);
     padding: 10px;
     margin-bottom: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid rgba(204, 204, 204, 0.637);
     border-radius: 5px;
-    background-color: #444; 
+    background-color: rgba(39, 39, 39, 0.424); 
     color: #fff;
+    font-family: "Outfit", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-size: 1.2rem
+  }
+  ::placeholder{
+    color: rgba(255, 255, 255, 0.507);
+    font-size: 1rem;
   }
   
   button {
@@ -57,19 +76,23 @@ body {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
-    background-color: #ff7f50;
+    background-color: #005c78b4;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     
-    
-  }
+    font-family: "Outfit", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-size: 1.2rem
+    }
   
   button:hover {
-    background-color: #ff6347;
-  }
+    background-color: #005c78da; 
+   }
   
   ul {
     list-style-type: none;
@@ -78,13 +101,17 @@ body {
   
   li {
     padding: 12px;
-    background-color: #555; 
+    background-color: rgba(85, 85, 85, 0.616); 
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     position: relative;
     margin-bottom: 8px;
     color: #fff;
+    font-family: "Outfit", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-size: 1.2rem
   }
   
   li:last-child {
@@ -94,7 +121,7 @@ body {
   li:hover {
     transform: translateY(-3px);
     box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
-    background-color: #000;
+    background-color: rgba(0, 0, 0, 0.555);
   }
   
   .delete-btn {
@@ -102,7 +129,7 @@ body {
     top: 50%;
     right: 10px;
     transform: translateY(-50%);
-    background-color: #ff6347;
+    background-color: #005c788c;
     color: white;
     border: none;
     border-radius: 50%;
@@ -116,7 +143,8 @@ body {
   }
   
   .delete-btn:hover {
-    background-color: #ff4500;
+    background-color: #005c78da; 
+
   }
   
   li:hover .delete-btn {
@@ -153,27 +181,7 @@ body {
     transform: translateY(-3px);
     box-shadow: 0 8px 12px rgba(0, 0, 0, 0.1);
   }
-  .delete-btn {
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    background-color: #ff6347;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    font-size: 18px;
-    line-height: 0;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    opacity: 0;
-  }
-  
-  .delete-btn:hover {
-    background-color: #ff4500;
-  }
+  */
   
   li:hover .delete-btn {
     opacity: 1;
@@ -183,7 +191,7 @@ body {
     color: rgb(206, 206, 206);
     text-align: center;
     font-weight: 600;
-    box-shadow: 0 1px 4px rgba(144, 144, 144, 0.65);
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
     margin-top: auto; 
   }
   
@@ -204,3 +212,8 @@ body {
   .footer__copy {
     font-size:1rem;
   }
+
+
+ 
+
+  
